Attemting to fix jumpiness of countdown

--- a/public/assets/less/wedding.less
+++ b/public/assets/less/wedding.less
@@ -303,20 +303,22 @@ body {
       padding: 0 0 30px 0;
       color: white;
       text-align: center;
+      height: 200px;
 
       .unit {
         .medium-text-uppercase();
         display: inline;
         position: relative;
         padding: 0 5px;
-
       }
+
       .countdown,
       .number {
         .large-text();
         display: inline;
         position: relative;
       }
+
       .countdown {
         display: block;
         margin-top: 0;
